# cpp-sistemas-embarcados-sensoring

./: .gitignore  CMakeLists.txt  Dockerfile  main.cpp
ClockCalendar/: Calendar.cpp  Calendar.h  Clock.cpp  Clock.h  ClockCalendar.cpp  ClockCalendar.h
Menu/: Menu.h
Pressure/: Pressure.cpp  Pressure.h
Registry/: PressureRegistry.cpp  PressureRegistry.h  Registry.h  TemperatureRegistry.cpp  TemperatureRegistry.h
Temperature/: Temperature.cpp  Temperature.h
Vector/: Vector.h
